--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ numpy = "^1.26.4"
 pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
 jupyter = "^1.0.0"
+openai = "^1.30.5"
+tenacity = "^8.3.0"
 
 
 [build-system]
