--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 torch = "^2.3.0"
-transformers = "^4.41.1"
+transformers = {extras = ["sentencepiece"], version = "^4.41.2"}
 peft = "^0.11.1"
 accelerate = "^0.30.1"
 bitsandbytes = "^0.43.1"
@@ -17,10 +17,11 @@ numpy = "^1.26.4"
 pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
 jupyter = "^1.0.0"
-openai = "^1.30.5"
+openai = "0.28"
 tenacity = "^8.3.0"
 python-dotenv = "^1.0.1"
 fire = "^0.6.0"
+sentencepiece = "^0.2.0"
 
 
 [build-system]
