--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,23 +7,22 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-torch = "^2.3.0"
-transformers = {extras = ["sentencepiece"], version = "^4.41.2"}
-peft = "^0.11.1"
-accelerate = "^0.30.1"
-bitsandbytes = "^0.43.1"
-trl = "^0.8.6"
-numpy = "^1.26.4"
-pandas = "^2.2.2"
-scikit-learn = "^1.5.0"
 jupyter = "^1.0.0"
-openai = "0.28"
-tenacity = "^8.3.0"
-python-dotenv = "^1.0.1"
-fire = "^0.6.0"
+pydantic = "^2.7.1"
+datasets = "^2.19.1"
 sentencepiece = "^0.2.0"
+evaluate = "^0.4.2"
+nltk = "^3.8.1"
+deepspeed = "^0.14.2"
+black = {extras = ["jupyter"], version = "^24.4.2"}
+isort = "^5.13.2"
+bitsandbytes = "^0.43.1"
+transformers = "^4.40.2"
+peft = "^0.10.0"
+packaging = "^24.0"
 wandb = "^0.17.0"
-
+trl = "^0.8.6"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
