--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-notebooks
 .env
 data
+result
+.ipynb_checkpoints
+.checkpoints
+wandb
