--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ python-dotenv = "^1.0.1"
 openai = "0.28"
 tenacity = "^8.3.0"
 fire = "^0.6.0"
+regex = "^2024.5.15"
+demoji = "^1.1.0"
 
 [build-system]
 requires = ["poetry-core"]
